feat(environment): implement multi-environment setup with Firebase
- Add Firebase config for staging and production environments
- Setup Firebase Emulator for development environment
- Implement environment indicator in UI (homepage)
- Add environment-specific database connections
- Update Gradle for Firebase integration
- Update CI/CD workflow to use production flavor
- Document environment strategy in README.md
- Configure proper signing for release builds

This commit enables the app to run in three distinct environments:
- Development: Using Firebase Emulator
- Staging: Using pockeat-staging-f099c project
- Production: Using pockeat-production project

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,7 +13,6 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
-
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -38,7 +37,7 @@ jobs:
         run: flutter analyze
 
   build:
-    name: Build Release APK
+    name: Build Production APK
     needs: test
     runs-on: ubuntu-latest
     
@@ -54,17 +53,8 @@ jobs:
           
       - name: Get dependencies
         run: flutter pub get
-        
-      - name: Build Release APK
-        run: flutter build apk --release
-        
-      - name: Upload Release APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release
-          path: build/app/outputs/flutter-apk/app-release.apk
-          
-      # Setup keystore untuk signed APK
+
+      # Setup keystore SEBELUM build
       - name: Setup keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/keystore.jks
@@ -72,3 +62,12 @@ jobs:
           echo "storePassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
           echo "keyAlias=upload" >> android/key.properties
           echo "keyPassword=${{ secrets.KEYSTORE_PASSWORD }}" >> android/key.properties
+        
+      - name: Build Production APK
+        run: flutter build apk --release --dart-define=FLAVOR=production
+        
+      - name: Upload Production APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-production
+          path: build/app/outputs/flutter-apk/app-release.apk
