--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,12 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 android {
     namespace = "com.pockeat"
     compileSdk = flutter.compileSdkVersion
@@ -21,9 +27,9 @@ android {
     signingConfigs {
         release {
             storeFile file("keystore.jks")
-            storePassword System.getenv("STORE_PASSWORD") ?: "${System.properties['STORE_PASSWORD']}"
-            keyAlias System.getenv("KEY_ALIAS") ?: "${System.properties['KEY_ALIAS']}"
-            keyPassword System.getenv("KEY_PASSWORD") ?: "${System.properties['KEY_PASSWORD']}"
+            storePassword keystoreProperties['storePassword']
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
         }
     }
 
