--- a/firebase.json
+++ b/firebase.json
@@ -1,39 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "pockeat-staging-f099c",
-          "appId": "1:119378561262:android:9d579c55db75a29f324bff",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "pockeat-staging-f099c",
-          "configurations": {
-            "android": "1:119378561262:android:9d579c55db75a29f324bff",
-            "ios": "1:119378561262:ios:843a9669cada44c1324bff",
-            "macos": "1:119378561262:ios:64816aecd2c59fe1324bff",
-            "web": "1:119378561262:web:8686d4c165ebeb2d324bff",
-            "windows": "1:119378561262:web:26ba0ad31c48e830324bff"
-          }
-        }
-      }
-    }
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099
-    },
-    "firestore": {
-      "port": 8080,
-      "rules": "firestore.rules"
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000
-    },
-    "singleProjectMode": true
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"production-pockeat","appId":"1:12528183634:android:1e8d9629a10880d4bc728b","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"production-pockeat","configurations":{"android":"1:12528183634:android:1e8d9629a10880d4bc728b","ios":"1:12528183634:ios:7ad41184750abbc2bc728b","macos":"1:12528183634:ios:6d2412bf6560c41ebc728b","web":"1:12528183634:web:ffd32ac530c4fef1bc728b","windows":"1:12528183634:web:35beb58f0e85feefbc728b"}}}}}}
