--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_dotenv: ^5.1.0
   syncfusion_flutter_charts: ^28.2.5+1
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2 
@@ -60,6 +61,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - .env
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
