--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,13 @@ dependencies:
   firebase_auth: ^5.4.2 
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
+  camera: ^0.10.0+1
+  mockito: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mocktail: ^0.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
