chore:exclude cpp sonarcloud flutter

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,20 @@ sonar.organization=pemuda-pembuka-langkah
 #sonar.projectName=pockeat-mobile
 #sonar.projectVersion=1.0
 
+# Path to source directories
+sonar.sources=lib
+sonar.tests=test
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Exclude C/C++/Objective-C files from analysis
+sonar.c.file.suffixes=-
+sonar.cpp.file.suffixes=-
+sonar.objc.file.suffixes=-
+
+# Flutter specific exclusions
+sonar.exclusions=**/*.g.dart,**/*.freezed.dart,**/generated_plugin_registrant.dart
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+# Import code coverage report
+sonar.dart.coverage.reportPaths=coverage/lcov.info
