--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^5.4.2 
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
+  font_awesome_flutter: ^10.7.0
 
 dev_dependencies:
   flutter_test:
