--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,10 +1,8 @@
-name: Staging CI
+name: Development CI
 
 on:
   push:
-    branches: [staging]
-  pull_request:
-    branches: [staging]
+    branches: ['PBI-*']
 
 jobs:
   test:
@@ -23,7 +21,7 @@ jobs:
       
       - name: Create .env file
         run: |
-          echo "FLAVOR=staging" > .env
+          echo "FLAVOR=dev" > .env
           echo "STAGING_FIREBASE_PROJECT_ID=${{ secrets.STAGING_FIREBASE_PROJECT_ID }}" >> .env
           echo "STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
           echo "STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}" >> .env
@@ -204,9 +202,6 @@ jobs:
           if [ -f "coverage/lcov.info" ]; then
             # Get branch name
             BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-            if [ "$GITHUB_EVENT_NAME" = "pull_request" ]; then
-              BRANCH_NAME="${GITHUB_HEAD_REF}"
-            fi
             
             cat >> reports/index.html << EOL
               </div>
@@ -311,53 +306,8 @@ jobs:
       - name: Display Codecov link
         run: |
           BRANCH_NAME="${GITHUB_REF#refs/heads/}"
-          if [ "$GITHUB_EVENT_NAME" = "pull_request" ]; then
-            BRANCH_NAME="${GITHUB_HEAD_REF}"
-          fi
           REPO_NAME="${{ github.repository }}"
           echo "Code Coverage Report: https://codecov.io/gh/${REPO_NAME}/branch/${BRANCH_NAME}"
           
       - name: Run Flutter Analyze for CI Failure
         run: flutter analyze --no-fatal-warnings --no-fatal-infos
-
-  build:
-    name: Build Debug APK
-    needs: test
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.29.0'
-          channel: 'stable'
-          cache: true
-          
-      - name: Create .env file
-        run: |
-          echo "FLAVOR=staging" > .env
-          echo "STAGING_FIREBASE_PROJECT_ID=${{ secrets.STAGING_FIREBASE_PROJECT_ID }}" >> .env
-          echo "STAGING_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.STAGING_FIREBASE_MESSAGING_SENDER_ID }}" >> .env
-          echo "STAGING_FIREBASE_STORAGE_BUCKET=${{ secrets.STAGING_FIREBASE_STORAGE_BUCKET }}" >> .env
-          echo "STAGING_FIREBASE_ANDROID_APP_ID=${{ secrets.STAGING_FIREBASE_ANDROID_APP_ID }}" >> .env
-          echo "STAGING_FIREBASE_ANDROID_API_KEY=${{ secrets.STAGING_FIREBASE_ANDROID_API_KEY }}" >> .env
-          echo "STAGING_FIREBASE_IOS_APP_ID=${{ secrets.STAGING_FIREBASE_IOS_APP_ID }}" >> .env
-          echo "STAGING_FIREBASE_IOS_API_KEY=${{ secrets.STAGING_FIREBASE_IOS_API_KEY }}" >> .env
-          echo "STAGING_FIREBASE_IOS_BUNDLE_ID=${{ secrets.STAGING_FIREBASE_IOS_BUNDLE_ID }}" >> .env
-          echo "STAGING_FIREBASE_WEB_APP_ID=${{ secrets.STAGING_FIREBASE_WEB_APP_ID }}" >> .env
-          echo "STAGING_FIREBASE_WEB_API_KEY=${{ secrets.STAGING_FIREBASE_WEB_API_KEY }}" >> .env
-          echo "STAGING_FIREBASE_AUTH_DOMAIN=${{ secrets.STAGING_FIREBASE_AUTH_DOMAIN }}" >> .env
-      
-      - name: Get dependencies
-        run: flutter pub get
-        
-      - name: Build Debug APK
-        run: flutter build apk --debug
-        
-      - name: Upload Debug APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: build/app/outputs/flutter-apk/app-debug.apk
