--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
         
+      - name: Generate mocks with build_runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+              
       - name: Run Flutter Analyze for Report
         run: |
           mkdir -p analysis-results
