--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
   uuid: ^4.5.1
+  google_generative_ai: ^0.4.6
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
