--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_dotenv: ^5.1.0
+  flutter_dotenv: ^5.2.1
   syncfusion_flutter_charts: ^28.2.5+1
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2 
@@ -44,6 +44,7 @@ dependencies:
   uuid: ^4.5.1
   google_generative_ai: ^0.4.6
   mocktail: ^1.0.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
