--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
   uuid: ^4.5.1
+  intl: ^0.20.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
