--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mockito: ^5.0.0
   provider: ^6.1.1
   image_picker: ^1.1.2
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
