--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^6.1.1
   image_picker: ^1.1.2
   flutter_bloc: ^9.1.0
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
