--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   flutter_bloc: ^9.1.0
   get_it: ^8.0.3
+  test_cov_console: ^0.2.2
 
 dev_dependencies:
   flutter_test:
