--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   flutter_bloc: ^9.1.0
   get_it: ^8.0.3
+  test_cov_console: ^0.2.2
 
 dev_dependencies:
   flutter_test:
