--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -126,10 +126,10 @@ jobs:
         run: flutter pub get
         
       - name: Build Debug APK
-        run: flutter build apk --release
+        run: flutter build apk --profile
         
       - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: build/app/outputs/flutter-apk/app-profile.apk
