--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   get_it: ^8.0.3
   test_cov_console: ^0.2.2
   fake_cloud_firestore: ^3.1.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
