--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dev_dependencies:
   build_runner: ^2.3.3
   test_cov_console: ^0.2.2
 
+  flutter_native_splash: ^2.3.9
+  flutter_launcher_icons: ^0.13.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -76,6 +79,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/icons/
     - .env
 
   # The following line ensures that the Material Icons font is
@@ -113,3 +117,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/Logo_PockEat_draft.png"
+  adaptive_icon_background: "#F5F0E6"
+  adaptive_icon_foreground: "assets/icons/Logo_PockEat_draft_transparent.png"
+
+flutter_native_splash:
+  color: "#F5F0E6"
+  image: assets/icons/LogoPanjang_PockEat_draft_transparent.png
+  android_12:
+    image: assets/icons/LogoPanjang_PockEat_draft_transparent.png
+    icon_background_color: "#F5F0E6"
