--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   test_cov_console: ^0.2.2
   fake_cloud_firestore: ^3.1.0
   http: ^1.3.0
+  uni_links: ^0.5.1
+  firebase_dynamic_links: ^6.1.4
 
 dev_dependencies:
   flutter_test:
