--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: pockeat
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,14 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_dotenv: ^5.2.1
   syncfusion_flutter_charts: ^28.2.5+1
   firebase_core: ^3.11.0
-  firebase_auth: ^5.4.2 
+  firebase_auth: ^5.4.2
   cloud_firestore: ^5.6.3
   firebase_storage: ^12.4.2
   uuid: ^4.5.1
@@ -55,8 +54,9 @@ dependencies:
   test_cov_console: ^0.2.2
   fake_cloud_firestore: ^3.1.0
   http: ^1.3.0
-  uni_links: ^0.5.1
+  app_links: ^3.4.3
   firebase_dynamic_links: ^6.1.4
+  meta: ^1.16.0
 
 dev_dependencies:
   flutter_test:
@@ -71,10 +71,10 @@ dev_dependencies:
   build_runner: ^2.3.3
   test_cov_console: ^0.2.2
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+  # For information on the generic Dart part of this file, see the
+  # following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+  # The following section is specific to Flutter packages.
   cloud_firestore_platform_interface: any
 flutter:
   assets:
